--- a/.github/workflows/Destroy_workflow.yaml
+++ b/.github/workflows/Destroy_workflow.yaml
@@ -14,7 +14,7 @@ on:
 
 jobs:
   terraform:
-    name: "Terraform Apply"
+    name: "Terraform Destroy"
     runs-on: ubuntu-latest
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
