--- a/.github/workflows/Apply_workflow.yaml
+++ b/.github/workflows/Apply_workflow.yaml
@@ -45,5 +45,5 @@ jobs:
         id: plan
         run: terraform plan -var-file="${{ inputs.tfvars_filename}}"
       
-      - name: Terraform Apply
-        run: terraform apply -auto-approve  -var-file="${{ inputs.tfvars_filename}}"
+      # - name: Terraform Apply
+      #   run: terraform apply -auto-approve  -var-file="${{ inputs.tfvars_filename}}"
