--- a/.github/workflows/Apply_workflow.yaml
+++ b/.github/workflows/Apply_workflow.yaml
@@ -10,6 +10,10 @@ on:
         options:
         - dev.tfvars
         - prod.tfvars
+      workspace_name:
+        description: "Enter the name of the workspace"
+        required: true
+        type: string
 
 
 jobs:
@@ -20,7 +24,7 @@ jobs:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY : ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_SESSION_TOKEN : ${{ secrets.AWS_SESSION_TOKEN }}
-      TF_WORKSPACE: project4
+      TF_WORKSPACE: ${{ inputs.workspace_name }}
 
     steps:
       - name: Checkout
@@ -32,6 +36,11 @@ jobs:
       - name: Terraform Format
         id: fmt
         run: terraform fmt 
+      
+      - name: Terraform Workspace
+        id: workspce_change
+        run: terraform workspace new ${{ env.TF_WORKSPACE}}
+
       
       - name: Terraform Workspace
         id: workspce
