--- a/.github/workflows/Destroy_workflow.yaml
+++ b/.github/workflows/Destroy_workflow.yaml
@@ -10,6 +10,10 @@ on:
         options:
         - dev.tfvars
         - prod.tfvars
+      workspace_name:
+        description: "Enter the name of the workspace"
+        required: true
+        type: string
 
 
 jobs:
@@ -20,7 +24,7 @@ jobs:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY : ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_SESSION_TOKEN : ${{ secrets.AWS_SESSION_TOKEN }}
-      TF_WORKSPACE: project3
+
 
     steps:
       - name: Checkout
@@ -32,18 +36,22 @@ jobs:
       - name: Terraform Format
         id: fmt
         run: terraform fmt 
-      
+
+      - name: Terraform Init
+        id: init
+        run: terraform init
+
+      - name: Terraform Workspace change
+        id: workspce_change
+        run: terraform workspace new ${{ inputs.workspace_name}}
+
       - name: Terraform Workspace
         id: workspce
         run: terraform workspace show
 
-      - name: Terraform Init
-        id: init
-        run: terraform init 
-      
       - name: Terraform Plan
         id: plan
         run: terraform plan -var-file="${{ inputs.tfvars_filename}}"
       
-    #   - name: Terraform Destroy
-    #     run: terraform destroy -auto-approve -var-file="${{ inputs.tfvars_filename}}"
+      # - name: Terraform Destroy
+      #   run: terraform destroy -auto-approve  -var-file="${{ inputs.tfvars_filename}}"
