--- a/.github/workflows/Destroy_workflow.yaml
+++ b/.github/workflows/Destroy_workflow.yaml
@@ -45,5 +45,5 @@ jobs:
         id: plan
         run: terraform plan -var-file="${{ inputs.tfvars_filename}}"
       
-      # - name: Terraform Destroy
-      #   run: terraform destroy -auto-approve  -var-file="${{ inputs.tfvars_filename}}"
+      - name: Terraform Destroy
+        run: terraform destroy -auto-approve  -var-file="${{ inputs.tfvars_filename}}"
