--- a/.github/workflows/Destroy_workflow.yaml
+++ b/.github/workflows/Destroy_workflow.yaml
@@ -53,5 +53,5 @@ jobs:
         id: plan
         run: terraform plan -var-file="${{ inputs.tfvars_filename}}"
       
-      - name: Terraform Destroy
-        run: terraform destroy -auto-approve  -var-file="${{ inputs.tfvars_filename}}"
+      # - name: Terraform Destroy
+      #   run: terraform destroy -auto-approve  -var-file="${{ inputs.tfvars_filename}}"
